EEVEE-Next: Border rendering not working since mixed resolution rendering was added #119510

Closed
opened 2024-03-15 13:34:31 +01:00 by Jeroen Bakker · 0 comments
Member

System Information
Operating system: Linux-6.5.0-25-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: GFX1101 (gfx1101, LLVM 15.0.7, DRM 3.54, 6.5.0-25-generic) AMD 4.6 (Core Profile) Mesa 23.2.1-1ubuntu3.1~22.04.2

Blender Version
Broken: version: 4.2.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: Unknown
Worked: (newest version of Blender that worked as expected)

Short description of error
Border rendering is broken since mixed resolution rendering was added

Exact steps for others to reproduce the error

  • Enable EEVEE-Next
  • Enable border rendering
  • Switch to material preview/render mode
  • Change Performance/Viewport/Pixel Size to 2x, 4x or 8x.

image

This seems to go wrong during the film accumulation step. The input image seems to be corrently rendered
image
but the output is incorrect.
Note that the shader is using a viewport during the rasterization stage.

**System Information** Operating system: Linux-6.5.0-25-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: GFX1101 (gfx1101, LLVM 15.0.7, DRM 3.54, 6.5.0-25-generic) AMD 4.6 (Core Profile) Mesa 23.2.1-1ubuntu3.1~22.04.2 **Blender Version** Broken: version: 4.2.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `Unknown` Worked: (newest version of Blender that worked as expected) **Short description of error** Border rendering is broken since mixed resolution rendering was added **Exact steps for others to reproduce the error** - Enable EEVEE-Next - Enable border rendering - Switch to material preview/render mode - Change `Performance/Viewport/Pixel Size` to 2x, 4x or 8x. ![image](/attachments/d434cd25-eb20-4915-8b37-5046b9d1f9ea) This seems to go wrong during the film accumulation step. The input image seems to be corrently rendered ![image](/attachments/42f1ac00-db9a-47ae-9c4b-e41d63b5f724) but the output is incorrect. Note that the shader is using a viewport during the rasterization stage.
950 KiB
2.0 MiB
Jeroen Bakker added this to the 4.2 LTS milestone 2024-03-15 13:34:31 +01:00
Jeroen Bakker added the
Type
Bug
Module
EEVEE & Viewport
Status
Confirmed
Priority
Normal
labels 2024-03-15 13:34:32 +01:00
Jeroen Bakker self-assigned this 2024-03-15 13:34:32 +01:00
Jeroen Bakker added this to the EEVEE & Viewport project 2024-03-15 13:34:34 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-18 16:03:12 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119510
No description provided.